# tpchgen-rs

./: .typos.toml
.github/workflows/: build-py-packages.yml  ci_typos.yml  conformance.yml  rust.yml  tpcdsgen-conformance.yml
tpchgen-arrow/: Cargo.toml  build.rs
tpchgen-arrow/cpp/: cudf_writer.cpp  cudf_writer.h
tpchgen-arrow/examples/: write_parquet_gpu.rs
tpchgen-arrow/src/: lib.rs  parquet.rs
tpchgen-cli/: Cargo.toml
tpchgen-cli/src/: csv.rs  generate.rs  lib.rs  output_plan.rs  parquet.rs  progress.rs  runner.rs
tpchgen-cli/tests/: cli_integration.rs
tpchgen/src/: csv.rs
tpchgen/src/q_and_a/: answers_sf1.rs
